--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -21,4 +21,5 @@ repositories {
 dependencies {
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation 'org.openftc:easyopencv:1.4.1'
+    implementation 'com.esotericsoftware.yamlbeans:yamlbeans:1.13'
 }
