--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation 'org.openftc:easyopencv:1.4.1'
     implementation 'com.esotericsoftware.yamlbeans:yamlbeans:1.13'
+    implementation 'com.arcrobotics:ftclib:1.1.6' // core
 }
